k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lamp
  labels:
    app.kubernetes.io/name: lamp
    environment: production
